examples/napi/tests/build_error_tests/native_borrow_scope.rs
use napi::bindgen_prelude::NativeBorrowScope;

fn main() {
  let _scope = NativeBorrowScope::new();
}
